<resources>
    <string name="app_name">StoreKeep</string>
    <string name="look_at_logcat_for_results">logcat _results</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="empty">It Seems you haven\'t added any product yet</string>
    <string name="editor_insert_product_failed">error inserting product</string>
    <string name="editor_insert_product_successful">Saved product</string>
    <string name="editor_update_product_failed">update failed</string>
    <string name="editor_update_product_successful">update successful</string>
    <string name="product_name_toast">Enter product name</string>
    <string name="product_price_toast">Enter Product\'s Price</string>
    <string name="product_quantity_toast">Enter Quantity of the Product</string>
    <string name="product_supplier_name_toast">Enter Supplier Name</string>
    <string name="product_supplier_phone_toast_2">Enter 10-digit phone number</string>
    <string name="product_supplier_phone_toast">Enter phone number</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>



    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>


    <string name="discard">Discard</string>


    <string name="keep_editing">Keep Editing</string>
    <string name="sanity_check_product_name">Product requires a name</string>
    <string name="sanity_check_product_price">product requires valid price</string>
    <string name="sanity_check_product_quantity">Product requires valid quantity</string>
    <string name="sanity_check_supplier_name">Supplier requires name</string>
    <string name="sanity_check_supplier_number">Supplier requires valid number</string>
    <string name="sanity_check_supplier_ten_digit_number">supplier requires 10 digit number</string>
    <string name="failed_to_insert">Failed to insert row for</string>
    <string name="deletion_not_supported">Deletion is not supported for</string>
    <string name="update_not_supported">Update is not supported for</string>
    <string name="order">Order</string>
    <string name="qty">Qty- </string>
    <string name="dollar">$ </string>


    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sell">sell</string>
    <string name="last_item">last item</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity_toast_plu_minus">quantity is needed</string>
</resources>
